fix(search) : fix scrollbar nav + fix design

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,7 @@
 .left-pane {
   width: 640px;
   min-width: 640px;
+  display: grid;
 }
 .right-pane {
   width: 80%;
