--- a/src/app/structure-list/components/search/search.component.scss
+++ b/src/app/structure-list/components/search/search.component.scss
@@ -33,18 +33,18 @@
     .separator {
       height: 100%;
       width: 2px;
-      background-color: $grey-6;
+      background-color: $grey-4;
       margin: 0 5px 0 5px;
     }
     .inputSection {
       padding: 6px 3px 6px 6px;
       min-width: 463px;
-      border: 1px solid $grey-6;
+      border: 1px solid $grey-4;
       background-color: $white;
       height: 40px;
     }
     .searchButton {
-      border: 1px solid $grey-6;
+      border: 1px solid $grey-4;
       border-radius: 6px;
       @include background-hash;
       padding: 0 0 4px 5px;
