--- a/src/assets/scss/_buttons.scss
+++ b/src/assets/scss/_buttons.scss
@@ -5,7 +5,7 @@
   background: $white;
   height: 40px;
   width: 190px;
-  border: 1px solid $grey-6;
+  border: 1px solid $grey-4;
   padding: 3px 16px 3px 16px;
   outline: none;
   border-radius: 4px;
